--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
